[show-hint addon] Fix scrollbar on hint widget overlapping text
See https://discuss.codemirror.net/t/width-of-sql-hint-dropdown-in-firefox-is-not-always-correct/757

--- a/addon/hint/show-hint.css
+++ b/addon/hint/show-hint.css
@@ -26,7 +26,6 @@
   padding: 0 4px;
   border-radius: 2px;
   max-width: 19em;
-  overflow: hidden;
   white-space: pre;
   color: black;
   cursor: pointer;
